kubernetes/services/kaneo/kaneo-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kaneo-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kaneo-api
  template:
    metadata:
      labels:
        app: kaneo-api
    spec:
      containers:
        - name: kaneo-api
          image: ghcr.io/usekaneo/api:2.2.1@sha256:5b7ff5fbcb7a2fc445d14abe36571fb807ace8026850e24a0e3e8bae6980fcd7
          ports:
            - containerPort: 1337
