kubernetes/services/kaneo/kaneo-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kaneo-api
  namespace: default
spec:
  selector:
    app: kaneo-api
  ports:
  - port: 1337
    targetPort: 1337
