kubernetes/services/kaneo/kaneo-postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kaneo-db
  namespace: default
spec:
  selector:
    app: kaneo-db
  ports:
  - port: 5432
    targetPort: 5432
