kubernetes/services/kaneo/kaneo-api-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kaneo-api-ingressroute
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kaneo-api.mistyfumes.dev`)
      kind: Rule
      services:
        - name: kaneo-api
          port: 1337
  tls:
    certResolver: cloudflare
