kubernetes/services/kaneo/kaneo-web-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kaneo-ingressroute
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kaneo.kube-demo.mistyfumes.dev`)
      kind: Rule
      services:
        - name: kaneo-web
          port: 5173
  tls:
    certResolver: cloudflare
